--- a/ping.yml
+++ b/ping.yml
@@ -1,6 +1,10 @@
 - name: Ping the nodes
-  gather_facts: no
   hosts: site
-  become: yes
   tasks:
-  - action: ping
+  - name: Ping site
+    shell: ping -c 1 -w 2 google.com
+    register: ping_result
+
+  - name: Ping result
+    debug:
+      msg: "{{ ping_result.stdout_lines }}"
